# PixCollector

./: .env.example  .gitignore  Dockerfile  Dockerfile.gitflow  Dockerfile_gitflow  HUEY_SETUP.md  LICENSE  README.md  api.py  app.py  auth.py  collector.py  config.py  database.py  docker-compose.yml  migrate.py  models.py  pyproject.toml  rate_limiter.py  requirements.txt  run.py  run_app.py  run_huey.py  scheduler.py  scheduler_run.py  updater.py  web.py
.github/workflows/: docker-build.yml
auth/: __init__.py  web_auth.py
controllers/: __init__.py  artwork_controller.py  auth_controller.py  collect_controller.py  config_controller.py  follow_controller.py  public_controller.py
core/: __init__.py  database.py  huey.py  session.py
docs/: API_KEYS.md
models/: __init__.py  api_key.py  artwork.py  collection_log.py  follow.py  scheduler_config.py  system_config.py  user.py
repositories/: __init__.py  api_key_repository.py  artwork_repository.py  base_repository.py  collection_repository.py  config_repository.py  follow_repository.py  scheduler_repository.py  user_repository.py
services/: __init__.py  api_key_service.py  artwork_service.py  auth_service.py  collection_service.py  config_service.py  follow_service.py  huey_service.py  huey_task_service.py  pixiv_service.py  scheduler_service.py  tempCodeRunnerFile.py
templates/: artworks.html  base.html  collect.html  config.html  follows.html  index.html  login.html  public.html
templates/errors/: 403.html  404.html  500.html
utils/: __init__.py  api_rate_limiter.py  pagination.py  pixiv_client.py  rate_limiter.py  task_tracker.py  time_utils.py
